--- a/_config.yml
+++ b/_config.yml
@@ -136,7 +136,7 @@ author:
       # url: "https://github.com/"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      # url: "https://instagram.com/"
+      url: "https://instagram.com/hyeonsoo08"
 
 # Site Footer
 footer:
